Implement shuffle functionality to the app

--- a/towns.html
+++ b/towns.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-
+<div> <button id="btnShuffle">Shuffle</button> </div>
 <h1>Towns</h1>
+
 <select id="towns" size="4">
     <option>Sofia</option>
     <option>Plovdiv</option>
@@ -24,6 +25,10 @@
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
 </div>
+
+<div> <button id="btnShuffle">Shuffle</button> </div>
+
+
 <div id="result"></div>
 
 </body>
