--- a/towns.html
+++ b/towns.html
@@ -24,9 +24,10 @@
 <div>
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
+    <button id="btnShuffle">Shuffle</button>
 </div>
 
-<div> <button id="btnShuffle">Shuffle</button> </div>
+
 
 
 <div id="result"></div>
